openmediavault (7.7.14-1) stable; urgency=medium

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 01 Aug 2025 12:40:01 +0200

openmediavault (7.7.13-2) stable; urgency=medium

  * Ignore `~/.toprc` when fetching `top` stats.
  * Several UI improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 21 Jul 2025 19:30:29 +0200

openmediavault (7.7.12-2) stable; urgency=medium

  * Update locale files.
  * Several UI improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 11 Jul 2025 11:25:09 +0200

openmediavault (7.7.11-1) stable; urgency=medium

  * Update locale files.
  * Several UI improvements.
  * Improve the `Diagnostics | Processes` page.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 02 Jul 2025 15:28:20 +0200

openmediavault (7.7.10-1) stable; urgency=medium

  * Add `ID` column, hidden by default, to the `User/Group Permissions` table
    on the `Storage | Shared Folders | ACL` page. Additionally display the UID
    and GID in the `Owner` and `Group` dropdown boxes.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Jun 2025 21:25:43 +0200

openmediavault (7.7.9-1) stable; urgency=medium

  * Update locale files.
  * Add UDEV rule to fix the duplicate serial number issue for external SATA
    hard drive adapter cable PA023U3.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Jun 2025 19:27:02 +0200

openmediavault (7.7.8-1) stable; urgency=medium

  * Update locale files.
  * Issue #1965: Hardening of the `omv-btrfs-dfree` command.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 22 May 2025 12:43:55 +0200

openmediavault (7.7.7-1) stable; urgency=medium

  * Display BTRFS details for each device of the filesystem.
  * Issue #1952: Fix bug in `openmediavault.fs.Filesystem.parent_device_file`
    Python method. This affects NVMe devices, for example.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 01 May 2025 08:19:33 +0200
